# djikmz

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/djikmz/: __init__.py  action_group.py  heading_param.py  task_builder.py  turn_param.py  waypoint.py
src/djikmz/action/: action.py  gimbal_actions.py
src/djikmz/model/: __init__.py  action_group.py  coordinate_system_param.py  heading_param.py  kml.py  mission_config.py  turn_param.py  waypoint.py
src/djikmz/model/action/: __init__.py  action.py  camera_actions.py  movement_actions.py  record_actions.py  registry.py
tests/: test_action_group.py  test_action_group_management.py  test_actions.py  test_actions_xml.py  test_coordinate_system_param.py  test_heading_param.py  test_kml.py  test_mission_config.py  test_task_builder.py  test_turn_param.py  test_waypoint.py
